# swing-sage

./: .env.example  .gitignore  CLAUDE.md  PROJECT_PLAN.md  README.md  package.json  pyproject.toml  run_mcp_server.cmd  schema.sql  setup_database.py  triggers.sql
.claude/: settings.local.json
.claude/agents/: portfolio-strategist.md  price-analyst.md  risk-manager.md  trade-orchestrator.md
docs/: README.md
docs/architecture/: agent-system-design.md  data-architecture.md  database-schema.md  spine-ribs-memory-system.md  system-overview.md
docs/development/: setup-guide.md
docs/implementation/: current-status.md  mcp-server-setup-guide.md
docs/requirements/: mvp1-mcpserver-prd.md  mvp2-subagents-prd.md  mvp3-memory-prd.md
docs/technical/: claude-code-2025-developments.md  claude-code-integration.md  mcp-integration-guide.md  troubleshooting-guide.md
docs/trading/: conversation-examples.md
mcp-server/: trading-mcp-stdio-old.js  trading-mcp-stdio.js
mcp-server/scripts/: canonicalize_key.py  emit_event.py  get_events.py  get_market_data.py
mcp-server/src/brokers/: __init__.py  base.py  ibkr.py  mock.py
mcp-server/src/database/: __init__.py  connection.py
tests/: diagnose_mcp_env.py  test_mcp_debug.py  test_mcp_directly.py  trigger_tests.md  trigger_tests.sql
