[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swing-sage"
version = "0.1.0"
description = "Claude Code as a Conversational Trading Platform - Swing Sage"
authors = [{name = "Swing Sage Team", email = "team@swingsage.ai"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "psycopg2-binary==2.9.9",
    "sqlalchemy==2.0.23",
    "openai>=1.40.0",
    "anthropic==0.7.8",
    "pandas==2.0.3",
    "numpy==1.26.4",
    "pydantic==1.10.13",
    "yfinance==0.2.28",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "click==8.1.7",
    "rich==13.7.0",
    "ib_insync==0.9.86",
    "pytest==8.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.12.0", 
    "isort>=5.13.2",
    "mypy>=1.7.1",
]

[tool.setuptools.packages.find]
include = ["core*", "brokers*", "market_data*", "agents*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true